Name all struct-like enum branches
